# legendary-doc-test

./: .gitignore  .gitmodules  README.md  lumache.py  pyproject.toml
.github/workflows/: docs-run.yml
docs/: genindex.html  index.html  objects.inv  searchindex.js  usage.html
docs/_sources/: index.md.txt  usage.md.txt
docs/source/: conf.py  index.md  index.rst  usage.md
