[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "mytest", email = "mytest@mytest"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx~=4.5.0"
    "myst-parser"
    "sphinx_rtd_theme"
]