[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "mytest", email = "mytest@mytest"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx",
    "myst-parser",
    "sphinx_rtd_theme",
    "nbsphinx",
]